--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <li>Python, C++, C#, PHP, HTML</li>
         <li>MySQL, XML, Nette, dokuwiki</li>
         <li>Git(Hub), (La)TeX</li>
-        <li>English (C2), Spanish (B2), French (A2)</li>
+        <li>Czech (native speaker), English (C2), Spanish (B2), French (A2)</li>
       </ul>
     </div>
   </div>
