--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </li>
         <li class="fa-li">
           <i class="fa-solid fa-location-dot big-icon" aria-hidden="true"></i>
-          <span>FJFI ČVUT, Trojanova 13, Praha 2, Czechia</span>
+          <span>Prague, Czechia</span>
         </li>
       </ul>
     </div>
