--- a/index.html
+++ b/index.html
@@ -107,10 +107,19 @@
           <span>Prague, Czechia</span>
         </li>
       </ul>
+      <div class="container">
+        <h3>Contact form</h3>
+        <form action="mailto:hendrver@fjfi.cvut.cz" method="post" enctype="text/plain">
+          <input type="text" id="name" name="name" placeholder="Name" required="true"><br>
+          <input type="email" id="email" name="email" placeholder="E-mail" required="true"><br>
+          <textarea id="message" name="message" placeholder="Message" style="height:200px" required="true"></textarea><br>
+          <input type="submit" value="Send">
+        </form>
+      </div>
+
+      
     </div>
   </div>
-
-
 
 <!--  <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
