--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I'm a bachelor student at the <a href="https://www.fjfi.cvut.cz/en/">Faculty of Nuclear Sciences and Physics Engineering</a> of the Czech Technical University in Prague, Czechia. I study <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Mathematical Informatics</a> and currently I am interested in the topic of String attractors which belongs to the field of combinatorics on words.</p>
+      <p>I'm a bachelor student at the <a href="https://www.fjfi.cvut.cz/en/">Faculty of Nuclear Sciences and Physics Engineering</a> of the Czech Technical University in Prague, Czechia. I study <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Mathematical Informatics</a> and recently I have published my first <a href="https://arxiv.org/abs/2308.00850">paper</a> in the field of Combinatorics on words.</p>
       <p>Apart from studying I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">Physics Correspondence Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-presence physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani) and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
       <p>I also enjoy contributing to other educational events for students and children, such as <a href="https://tydenvedy.fjfi.cvut.cz">Science Week</a> at the FNSPE CTU, or Science summer camps for children organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>.</p>
     </div>
@@ -77,8 +77,8 @@
       <ul>
         <li>Combinatorics on words</li>
         <li>String attractors</li>
-        <li>Algorithms</li>
-        <li>Teaching and extracurricular education</li>
+        <li>Language learning</li>
+        <li>Students' organization management</li>
       </ul>
     </div>
     <div class="w3-third w3-container w3-padding-16">
