--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
       <ul>
         <li>Combinatorics on words</li>
         <li>String attractors</li>
+        <li>Bioinformatics</li>
         <li>Language learning</li>
         <li>Students' organization management</li>
       </ul>
