--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </li>
         <li class="fa-li">
           <i class="fa-solid fa-location-dot big-icon" aria-hidden="true"></i>
-          <span>Prague, Czechia</span>
+          <span>Rennes, France</span>
         </li>
       </ul>
       <div class="container">
