add projects, remove form

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I'm an engineering student at the <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a> of the Czech Technical University in Prague, Czechia. This year I study <a href="https://informatique.ens-rennes.fr/formation/master-1-informatique-parcours-science-informatique">Computer Science</a> at the Université de Rennes in France as an Erasmus exchange student. Recently I have published my first <a href="https://arxiv.org/abs/2308.00850">paper</a> in the field of Combinatorics on words with the results from my bachelor thesis.</p>
+      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently I study <a href="https://informatique.ens-rennes.fr/formation/master-1-informatique-parcours-science-informatique">Computer Science</a> at the École Normale Supérieure in Rennes, France as an Erasmus exchange student. Recently I have published my first <a href="https://arxiv.org/abs/2308.00850">paper</a> in the field of Combinatorics on words and my Erdös number is now 4 :)</p>
       <p>Apart from studying I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">Physics Correspondence Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-presence physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani) and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
       <p>I also enjoy contributing to other educational events for students and children, such as <a href="https://tydenvedy.fjfi.cvut.cz">Science Week</a> at the FNSPE CTU, or Science summer camps for children organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>.</p>
     </div>
@@ -75,10 +75,10 @@
     <div class="w3-third w3-container w3-padding-16">
       <h3>Interests</h3>
       <ul>
+        <li>Phylogenetic compression</li>
+        <li>Bioinformatics</li>
         <li>Combinatorics on words</li>
         <li>String attractors</li>
-        <li>Bioinformatics</li>
-        <li>Data compression</li>
         <li>Language learning</li>
         <li>Piano play</li>
       </ul>
@@ -86,8 +86,8 @@
     <div class="w3-third w3-container w3-padding-16">
       <h3>Skills</h3>
       <ul>
-        <li>Python, C++, C#, PHP, HTML</li>
-        <li>MySQL, XML, Nette, dokuwiki</li>
+        <li>Python, C++, PHP, Coq</li>
+        <li>SQL, XML, Nette, dokuwiki</li>
         <li>Git(Hub), (La)TeX</li>
         <li>Czech (native speaker), English (C2), Spanish (B2), French (A2)</li>
       </ul>
@@ -96,30 +96,34 @@
 
   <div class="w3-row light w3-padding-16" id="contact">
     <div class="w3-third w3-container">
+      <h1 class="w3-text-green">Recent projects</h1>
+    </div>
+    <div class="w3-twothird w3-container w3-padding-16">
+      <ul>
+        <li>Mathematical model of phylogenetic compression - current project under <a href="https://brinda.eu/" target="_blank">Karel Břinda</a> 
+        <li><a href="https://arxiv.org/abs/2308.00850" target="_blank">String attractors of Rote sequences</a> - paper with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
+        <li><a href="bachelor-thesis.pdf" target="_blank">String attractors</a> - bachelor thesis supervised by Ľubomíra Dvořáková and Karel Břinda</li>
+        <li>Other projects published at <a href="https://github.com/vercah/" target="_blank">GitHub</a></li>
+      </ul>
+    </div>
+  </div>
+
+
+  <div class="w3-row dark w3-padding-16" id="contact">
+    <div class="w3-third w3-container">
       <h1 class="w3-text-green">Contact</h1>
     </div>
     <div class="w3-twothird w3-container w3-padding-16">
       <ul class="fa-ul">
         <li class="fa-li">
           <i class="fa-solid fa-envelope big-icon" aria-hidden="true"></i>
-          <span><a href="mailto:hendrver@fjfi.cvut.cz">hendrver@fjfi.cvut.cz</a></span><br>
+          <span>hendrver[cat]fjfi[dog]cvut[dog]cz</span><br>
         </li>
         <li class="fa-li">
           <i class="fa-solid fa-location-dot big-icon" aria-hidden="true"></i>
-          <span>Rennes, France</span>
+          <span>  Rennes, France</span>
         </li>
-      </ul>
-      <div class="container">
-        <h3>Contact form</h3>
-        <form action="mailto:hendrver@fjfi.cvut.cz" method="post" enctype="text/plain">
-          <input type="text" id="name" name="name" placeholder="Name" required="true"><br>
-          <input type="email" id="email" name="email" placeholder="E-mail" required="true"><br>
-          <textarea id="message" name="message" placeholder="Message" style="height:200px" required="true"></textarea><br>
-          <input type="submit" value="Send">
-        </form>
-      </div>
-
-      
+      </ul>      
     </div>
   </div>
 
