--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <a href="https://github.com/vercah"><i class="fa-brands fa-square-github"></i></a>
           <a href="https://fykos.org/about-us/organizing-committee#11368"><i class="fa-solid fa-briefcase"></i></a>
         </div>
-      <div><a href="veronika-hendrychova-cv.pdf" style="text-decoration: none;"><i class="fa-solid fa-download"></i> My CV</a></div>
+      <div><a href="cv.pdf" style="text-decoration: none;"><i class="fa-solid fa-download"></i> My CV</a></div>
       </div>
       <!-- <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p> -->
     </div>
