--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <li>Python, C++, PHP, Coq</li>
         <li>SQL, XML, Nette, dokuwiki</li>
         <li>Git(Hub), (La)TeX</li>
-        <li>Czech (native speaker), English (C2), Spanish (B2), French (A2)</li>
+        <li>Czech (native speaker), English (C2), Spanish (B2), French (B1)</li>
       </ul>
     </div>
   </div>
