--- a/index.html
+++ b/index.html
@@ -19,41 +19,22 @@
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-theme-d4 w3-collapse w3-top w3-left-align w3-large">
-    <!--<a class="w3-bar-item w3-button w3-right w3-hide-medium w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>-->
     <a href="#about" class="w3-bar-item w3-button w3-theme-d1">Veronika Hendrychová</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hover-white" id="mySidebar">Contact</a>
   </div>
 </div>
 
-<!-- Sidebar -->
-<!-- <nav class="w3-sidebar w3-bar-block w3-collapse w3-large w3-theme-l5 w3-animate-left" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-right w3-xlarge w3-padding-large w3-hover-black w3-hide-large" title="Close Menu">
-    <i class="fa fa-remove"></i>
-  </a>
-  <h4 class="w3-bar-item"><b>Menu</b></h4>
-  <p>
-    blabla
-  </p>
-  <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
-  <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
-  <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
-  <a class="w3-bar-item w3-button w3-hover-black" href="#">Link</a>
-</nav>
- -->
-<!-- Overlay effect when opening sidebar on small screens -->
-<!-- <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div> -->
 
 <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
 <div class="w3-main">
-<!-- style="margin-left:250px"> -->
 
   <div class="w3-row w3-padding-64 light" id="about">
     <div class="w3-third w3-container">
       <div class="avatar-container">
         <img class="w3-center avatar" src="profile-photo.jpg" alt="Veronika Hendrychová">
         <div class="icons">
-          <a href="mailto:hendrver@fjfi.cvut.cz"><i class="fa-solid fa-envelope"></i></a>
           <a href="https://github.com/vercah"><i class="fa-brands fa-square-github"></i></a>
+          <a href="https://km.fjfi.cvut.cz/studenti/1898_hendrychova-veronika"><i class="fa-sharp fa-solid fa-graduation-cap"></i></a>
           <a href="https://fykos.org/about-us/organizing-committee#11368"><i class="fa-solid fa-briefcase"></i></a>
         </div>
       <div><a href="cv.pdf" style="text-decoration: none;"><i class="fa-solid fa-download"></i> My CV</a></div>
@@ -62,13 +43,13 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently I study <a href="https://informatique.ens-rennes.fr/formation/master-1-informatique-parcours-science-informatique">Computer Science</a> at the École Normale Supérieure in Rennes, France as an Erasmus exchange student. Recently I have published my first <a href="https://arxiv.org/abs/2308.00850">paper</a> in the field of Combinatorics on words and my Erdös number is now 4 :)</p>
-      <p>Apart from studying I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">Physics Correspondence Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-presence physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani) and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
+      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently I study <a href="https://informatique.ens-rennes.fr/formation/master-1-informatique-parcours-science-informatique">Computer Science</a> at the École Normale Supérieure in Rennes, France, as an Erasmus exchange student.</p>
+      <p>Apart from studying I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for (not only) Czech high-school students each year, including the <a href="https://fykos.org">Physics Correspondence Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-presence physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani) and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
       <p>I also enjoy contributing to other educational events for students and children, such as <a href="https://tydenvedy.fjfi.cvut.cz">Science Week</a> at the FNSPE CTU, or Science summer camps for children organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>.</p>
     </div>
   </div>
 
-  <div class="w3-row dark w3-padding-16">
+<!--   <div class="w3-row dark w3-padding-16">
     <div class="w3-third w3-container">
       <h1 class="w3-text-green">Interests and skills</h1>
     </div>
@@ -92,9 +73,9 @@
         <li>Czech (native speaker), English (C2), Spanish (B2), French (B1)</li>
       </ul>
     </div>
-  </div>
+  </div> -->
 
-  <div class="w3-row light w3-padding-16" id="contact">
+  <div class="w3-row dark w3-padding-16" id="contact">
     <div class="w3-third w3-container">
       <h1 class="w3-text-green">Recent projects</h1>
     </div>
@@ -109,7 +90,7 @@
   </div>
 
 
-  <div class="w3-row dark w3-padding-16" id="contact">
+  <div class="w3-row light w3-padding-16" id="contact">
     <div class="w3-third w3-container">
       <h1 class="w3-text-green">Contact</h1>
     </div>
