--- a/croco.html
+++ b/croco.html
@@ -68,26 +68,27 @@
   
   <script>
     const terminal = document.getElementById('terminal');
-    const delay = 30
+    const delay = 40
 
     const images = {
       text: `For young Croco, the world seemed vast and mysterious.
-As he grew older, he learned a way to treat the unknown - to approach it,
-sniff it, and try to understand.
-Because sometimes the unknown then laughs and understands back!\n
-Croco is on his way now,
-                         :+=.             .--=-:.                     exploring the vast world.
-         ..:..       .-=+=:-++-.        -+=:..:-++.          :::      But what is happening?
-     .=++=--=***+++++=-.     .:=+++++- =+.  .*+*:-*-::::::::*+:*=     Something unknown appearing?
-   :++:     :::..                      :.   .=++. ++::::--+-:..*-     Wait no
-  -*:               :+.   .     .      .+:     .  :.  .   .:-=+*.     It's him!
- :*=     .-======:  .*+=+**+==++*+==-   +*===++*=====+*++=--:.        He came to look at you
- =*=    =+:     -*. .++            .*- .=*.                           because he knows that
- =*    .*:       :++*+*=            .=+*+*+                           the next unknown friend
- .*-    ++.                                                           might be
-  :*=.   :=+++==---::..                                               just a sniff away.
-   .=**=.     ...::---===++=-.
-      :=++++++++++++++++++++**
+But as he grew older, he learned his way to treat the unknown.
+He likes to approach it carefully, sniff it,
+taste (if needed), and try to understand.
+Sometimes the unknown tastes like garbage, 
+but sometimes it understands back!\n
+Croco is on his way now,                               :+=.             .--=-:.
+exploring the vast world.              ..:..       .-=+=:-++-.        -+=:..:-++.          :::
+But what is that?                  .=++=--=***+++++=-.     .:=+++++- =+.  .*+*:-*-::::::::*+:*=
+Something unknown appearing?     :++:     :::..                      :.   .=++. ++::::--+-:..*-
+Wait no                         -*:               :+.   .     .      .+:     .  :.  .   .:-=+*.
+It's him!                      :*=     .-======:  .*+=+**+==++*+==-   +*===++*=====+*++=--:.
+He came to look at you         =*=    =+:     -*. .++            .*- .=*.
+for he knows that              =*    .*:       :++*+*=            .=+*+*+
+the next unknown friend        .*-    ++.
+might be                        :*=.   :=+++==---::..
+just a sniff away.               .=**=.     ...::---===++=-.
+                                   :=++++++++++++++++++++**
              `
     };
 
@@ -133,9 +134,12 @@ Croco is on his way now,
   
 
   <footer id="myFooter">
-    <div class="w3-container w3-theme-l2">
+  <div class="footer-container">
+    <div class="w3-container w3-theme-l2 footer-content">
+      <span style="margin-right: auto; text-align: left;"><a href="croco.html"><i class="fa-solid fa-atom-simple"></i>Crocoloop</a></span>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </div>
+  </div>
   </footer>
 
 <!-- END MAIN -->
