--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
 
 
   <footer id="myFooter">
-       <!--<div class="w3-container w3-theme-l2 w3-padding-32">
-      <h4>Footer</h4>
-    </div>-->
-    <div class="w3-container w3-theme-l2">
+  <div class="footer-container">
+    <div class="w3-container w3-theme-l2 footer-content">
+      <!-- <span style="margin-right: auto; text-align: left;"><a href="croco.html"><i class="fa-solid fa-atom-simple"></i>Crocoloop</a></span> -->
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </div>
+  </div>
   </footer>
 
 <!-- END MAIN -->
