add croco banner

--- a/croco.html
+++ b/croco.html
@@ -26,7 +26,7 @@
   .button-container {
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 10px 0px;
   }
   .button {
     padding: 8px 16px;
@@ -34,12 +34,24 @@
     color: #fff;
     text-decoration: none;
     border: none;
-    border-radius: 4px;
+    border-radius: 0px;
     cursor: pointer;
   }
   .button:hover {
     background-color: #265728;
   }
+  .banner-container {
+    display: block;
+    padding: 10px 0px;
+  }
+  .banner {
+  background-color: #4caf50; /* Green background color */
+  color: white; /* White text color */
+  padding: 3px; /* Padding around the text */
+  text-align: center; /* Center the text horizontally */
+  line-height: 1; /* Adjust line height to make it less tall */
+  font-weight: normal;
+}
 </style>
 </head>
 <body>
@@ -58,13 +70,17 @@
 
   <div class="w3-row w3-padding-64 light" id="about">
     <div class="w3-container">
-
+      <div class="banner-container">
+        <div class="banner">
+          <p><strong>Welcome to the Crocoloop!</strong></p>
+          <p>This Croco comes from a different meridian, nevertheless he found his place in the crocompany. You can move forward and backward with the buttons on the bottom of the page.</p>
+        </div>
+      </div>
+      <div id="terminal"></div>
       <div class="button-container">
         <a href="" class="button">Back</a>
         <a href="" class="button">Forth</a>
       </div>
-
-      <div id="terminal"></div>
   
   <script>
     const terminal = document.getElementById('terminal');
