Add buttons links croco

--- a/croco.html
+++ b/croco.html
@@ -83,8 +83,8 @@
       </div>
       <div id="terminal"></div>
       <div class="button-container">
-        <a href="" class="button">Back</a>
-        <a href="" class="button">Forth</a>
+        <a href="https://perso.eleves.ens-rennes.fr/people/gaetan.regaud/croco" class="button">Back</a>
+        <a href="https://perso.eleves.ens-rennes.fr/people/guilhem.repetto/croco/" class="button">Forth</a>
       </div>
   
   <script>
