--- a/croco.html
+++ b/croco.html
@@ -21,7 +21,7 @@
     font-family: 'Courier New', Courier, monospace; /* Use a monospace font with a wider aspect ratio */
     width: 100%;
     overflow-x: auto;
-    height: 420px;
+    height: 440px;
     background-color: black;
     color: white;
     padding: 10px;
@@ -78,7 +78,7 @@
       <div class="banner-container">
         <div class="banner">
           <p><strong>Welcome to the Crocoloop!</strong></p>
-          <p>This one comes from a different meridian, nevertheless she found her place in the crocompany. You can visit her colleagues using the buttons on the bottom of the page.</p>
+          <p>This one comes from a different meridian, nevertheless she found her place in the crocompany. You can visit her colleagues using the buttons at the bottom of the page.</p>
         </div>
       </div>
       <div id="terminal"></div>
