--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <footer id="myFooter">
   <div class="footer-container">
     <div class="w3-container w3-theme-l2 footer-content">
-      <!-- <span style="margin-right: auto; text-align: left;"><a href="croco.html"><i class="fa-solid fa-atom-simple"></i>Crocoloop</a></span> -->
+      <span style="margin-right: auto; text-align: left;"><a href="croco.html"><i class="fa-solid fa-atom-simple"></i>Crocoloop</a></span>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </div>
   </div>
