--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Personal website of Veronika Hendrychová.">
+
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="w3-theme-green.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
