--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently I study <a href="https://informatique.ens-rennes.fr/formation/master-1-informatique-parcours-science-informatique">Computer Science</a> at the École Normale Supérieure in Rennes, France as an Erasmus exchange student. Recently I have published my first <a href="https://arxiv.org/abs/2308.00850">paper</a> in the field of Combinatorics on words and my Erdös number is now 4 :)</p>
+      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently I study a second year of Masters in Mathematical Computer Science and I also work there as a teaching assistant in Linear algebra.</p>
+
       <p>Apart from studying I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">Physics Correspondence Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-presence physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani) and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
-      <p>I also enjoy contributing to other educational events for students and children, such as <a href="https://tydenvedy.fjfi.cvut.cz">Science Week</a> at the FNSPE CTU, or Science summer camps for children organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>.</p>
+
+      <p>I also enjoy contributing to other educational events for students and children, such as <a href="https://pair.camp/">the PAIR Camp</a>, or Science summer camps organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>. I find joy in learning foreign languages, playing Go, and practicing piano play.</p>
     </div>
   </div>
 
@@ -89,7 +91,7 @@
         <li>Python, C++, PHP, Coq</li>
         <li>SQL, XML, Nette, dokuwiki</li>
         <li>Git(Hub), (La)TeX</li>
-        <li>Czech (native speaker), English (C2), Spanish (B2), French (A2)</li>
+        <li>Czech (native speaker), English (C2), French (B2), Spanish (B1)</li>
       </ul>
     </div>
   </div>
@@ -121,7 +123,7 @@
         </li>
         <li class="fa-li">
           <i class="fa-solid fa-location-dot big-icon" aria-hidden="true"></i>
-          <span>  Rennes, France</span>
+          <span>  Prague, Czechia</span>
         </li>
       </ul>      
     </div>
