--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-theme-d4 w3-collapse w3-top w3-left-align w3-large">
-    <a href="#about" class="w3-bar-item w3-button w3-theme-d1">Veronika Hendrychová</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-hover-white" id="mySidebar">Contact</a>
+    <a href="#about" class="w3-bar-item w3-button w3-theme-d1 w3-hover-white">Veronika Hendrychová</a>
+    <a href="teaching.html" class="w3-bar-item w3-button w3-theme-d2 w3-hover-white">Teaching</a>
+    <a href="#contact" class="w3-bar-item w3-button w3-theme-d3 w3-hover-white" id="mySidebar">Contact</a>
   </div>
 </div>
 
