--- a/croco.html
+++ b/croco.html
@@ -64,7 +64,7 @@
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-theme-d4 w3-collapse w3-top w3-left-align w3-large">
-    <a href="index.html#about" class="w3-bar-item w3-button w3-theme-d1">Croconika Hendrychová <img src="transparent-croco.png" alt="Croconika"></a>
+    <a href="index.html#about" class="w3-bar-item w3-button w3-theme-d1 w3-hover-white">Croconika Hendrychová <img src="transparent-croco.png" alt="Croconika"></a>
     <!-- <a href="index.html#contact" class="w3-bar-item w3-button w3-hover-white" id="mySidebar">Contact</a> -->
   </div>
 </div>
