update research interests

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently I study a second year of Masters in Mathematical Computer Science and I also work there as a teaching assistant in Linear algebra.</p>
+      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently I study a second year of Masters in Mathematical Computer Science and I also work there as a teaching assistant in Linear algebra. Last year I spent in France as an Erasmus exchange student at the <a href="https://informatique.ens-rennes.fr/formation/deuxieme-annee-m1-sif">ENS Rennes</a>.</p>
 
       <p>Apart from studying I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">Physics Correspondence Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-presence physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani) and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
 
@@ -87,13 +87,14 @@
 
   <div class="w3-row dark w3-padding-16" id="contact">
     <div class="w3-third w3-container">
-      <h1 class="w3-text-green">Recent projects</h1>
+      <h1 class="w3-text-green">Research interests</h1>
     </div>
     <div class="w3-twothird w3-container w3-padding-16">
       <ul>
-        <li>Mathematical model of phylogenetic compression - current project under <a href="https://brinda.eu/" target="_blank">Karel Břinda</a> 
-        <li><a href="https://arxiv.org/abs/2308.00850" target="_blank">String attractors of Rote sequences</a> - paper with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
-        <li><a href="bachelor-thesis.pdf" target="_blank">String attractors</a> - bachelor thesis supervised by Ľubomíra Dvořáková and Karel Břinda</li>
+        <li><strong>Mathematical model of phylogenetic compression</strong> - current project under <a href="https://brinda.eu/" target="_blank">Karel Břinda</a>
+          <ul><li>genomics, phylogenetic trees, mathematical modeling, complexity theory</li></ul>
+        <li><strong>String attractors of Rote sequences</strong> - <a href="bachelor-thesis.pdf" target="_blank">Bachelor thesis</a> and subsequently a <a href="https://arxiv.org/abs/2308.00850" target="_blank">paper</a> with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
+          <ul><li>string attractors, combinatorics, Sturmian, pseudostandard, and Rote infinite words</li></ul>
         <li>Other projects published at <a href="https://github.com/vercah/" target="_blank">GitHub</a></li>
       </ul>
     </div>
