--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently I study a second year of Masters in Mathematical Computer Science and I also work there as a teaching assistant in Linear algebra. Last year I spent in France as an Erasmus exchange student at the <a href="https://informatique.ens-rennes.fr/formation/deuxieme-annee-m1-sif">ENS Rennes</a>.</p>
+      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently, I study the second year of Masters in Mathematical Computer Science, where I also work as a teaching assistant in Linear algebra. I spent the last year in France as an Erasmus exchange student at the <a href="https://informatique.ens-rennes.fr/formation/deuxieme-annee-m1-sif">ENS Rennes</a>.</p>x
 
-      <p>Apart from studying I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">Physics Correspondence Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-presence physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani) and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
+      <p>Apart from studying, I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">FYKOS Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-person physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani), and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
 
       <p>I also enjoy contributing to other educational events for students and children, such as <a href="https://pair.camp/">the PAIR Camp</a>, or Science summer camps organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>. I find joy in learning foreign languages, playing Go, and practicing piano play.</p>
 
@@ -87,14 +87,14 @@
 
   <div class="w3-row dark w3-padding-16" id="contact">
     <div class="w3-third w3-container">
-      <h1 class="w3-text-green">Research interests</h1>
+      <h1 class="w3-text-green">Research projects</h1>
     </div>
     <div class="w3-twothird w3-container w3-padding-16">
       <ul>
         <li><strong>Mathematical model of phylogenetic compression</strong> - current project under <a href="https://brinda.eu/" target="_blank">Karel Břinda</a>
           <ul><li>genomics, phylogenetic trees, mathematical modeling, complexity theory</li></ul>
         <li><strong>String attractors of Rote sequences</strong> - <a href="bachelor-thesis.pdf" target="_blank">Bachelor thesis</a> and subsequently a <a href="https://arxiv.org/abs/2308.00850" target="_blank">paper</a> with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
-          <ul><li>string attractors, combinatorics, Sturmian, pseudostandard, and Rote infinite words</li></ul>
+          <ul><li>string attractors, combinatorics on words, Sturmian, pseudostandard, and Rote infinite words</li></ul>
         <li>Other projects published at <a href="https://github.com/vercah/" target="_blank">GitHub</a></li>
       </ul>
     </div>
