--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <ul>
         <li><strong>Mathematical model of phylogenetic compression</strong> - current project under <a href="https://brinda.eu/" target="_blank">Karel Břinda</a>
           <ul><li>genomics, phylogenetic trees, mathematical modeling, complexity theory</li></ul>
-        <li><strong>String attractors of Rote sequences</strong> - <a href="bachelor-thesis.pdf" target="_blank">Bachelor thesis</a> and subsequently a <a href="https://arxiv.org/abs/2308.00850" target="_blank">paper</a> with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
+        <li><strong>String attractors of Rote sequences</strong> - <a href="bachelor-thesis.pdf" target="_blank">Bachelor thesis</a> and a subsequent <a href="https://arxiv.org/abs/2308.00850" target="_blank">paper</a> with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
           <ul><li>string attractors, combinatorics on words, Sturmian, pseudostandard, and Rote infinite words</li></ul>
         <li>Other projects published at <a href="https://github.com/vercah/" target="_blank">GitHub</a></li>
       </ul>
