--- a/croco/index.html
+++ b/croco/index.html
@@ -5,8 +5,8 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="w3.css">
-<link rel="stylesheet" href="w3-theme-green.css">
+<link rel="stylesheet" href="../css/w3.css">
+<link rel="stylesheet" href="../css/w3-theme-green.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://kit.fontawesome.com/445a6e766d.js" crossorigin="anonymous"></script>
@@ -19,6 +19,7 @@
   }
   #terminal {
     font-family: 'Courier New', Courier, monospace; /* Use a monospace font with a wider aspect ratio */
+    font-size: 15px;
     width: 100%;
     overflow-x: auto;
     height: 440px;
@@ -47,12 +48,12 @@
   }
   .banner-container {
     display: block;
-    padding: 10px 0px;
+    padding: 0px 0px;
   }
   .banner {
   background-color: #4caf50; /* Green background color */
   color: white; /* White text color */
-  padding: 3px 15px; /* Padding around the text */
+  padding: 1px 7px; /* Padding around the text */
   text-align: center; /* Center the text horizontally */
   line-height: 1; /* Adjust line height to make it less tall */
   font-weight: normal;
@@ -64,8 +65,7 @@
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-theme-d4 w3-collapse w3-top w3-left-align w3-large">
-    <a href="index.html#about" class="w3-bar-item w3-button w3-theme-d1 w3-hover-white">Croconika Hendrychová <img src="transparent-croco.png" alt="Croconika"></a>
-    <!-- <a href="index.html#contact" class="w3-bar-item w3-button w3-hover-white" id="mySidebar">Contact</a> -->
+    <a href="../" class="w3-bar-item w3-button w3-theme-d1 w3-hover-white">Croconika Hendrychová <img src="transparent-croco.png" alt="Croconika"></a>
   </div>
 </div>
 
@@ -73,7 +73,7 @@
 <!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
 <div class="w3-main">
 
-  <div class="w3-row w3-padding-64 light" id="about">
+  <div class="w3-row w3-padding-64 light">
     <div class="w3-container">
       <div class="banner-container">
         <div class="banner">
@@ -155,7 +155,7 @@ just a sniff away.                 :=++++++++++++++++++++**`
   <footer id="myFooter">
   <div class="footer-container">
     <div class="w3-container w3-theme-l2 footer-content">
-      <span style="margin-right: auto; text-align: left;"><a href="croco.html"><i class="fa-solid fa-atom-simple"></i>Crocoloop</a></span>
+      <span style="margin-right: auto; text-align: left;"><a href=""><i class="fa-solid fa-atom-simple"></i>Crocoloop</a></span>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </div>
   </div>
