--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Personal website of Veronika Hendrychová.">
+<meta name="description" content="Personal website of Veronika Hendrychová">
 
-<link rel="stylesheet" href="w3.css">
-<link rel="stylesheet" href="w3-theme-green.css">
+<link rel="stylesheet" href="css/w3.css">
+<link rel="stylesheet" href="css/w3-theme-green.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://kit.fontawesome.com/445a6e766d.js" crossorigin="anonymous"></script>
@@ -21,9 +21,8 @@
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-theme-d4 w3-collapse w3-top w3-left-align w3-large">
-    <a href="#about" class="w3-bar-item w3-button w3-theme-d1 w3-hover-white">Veronika Hendrychová</a>
-    <a href="teaching.html" class="w3-bar-item w3-button w3-theme-d2 w3-hover-white">Teaching</a>
-    <a href="#contact" class="w3-bar-item w3-button w3-theme-d3 w3-hover-white" id="mySidebar">Contact</a>
+    <a href="" class="w3-bar-item w3-button w3-theme-d1 w3-hover-white">Veronika Hendrychová</a>
+    <a href="teaching/" class="w3-bar-item w3-button w3-theme-d2 w3-hover-white">Teaching</a>
   </div>
 </div>
 
@@ -46,7 +45,7 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I'm an engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. Currently, I study the second year of Masters in Mathematical Computer Science, where I also work as a teaching assistant in Linear algebra. I spent the last year in France as an Erasmus exchange student at the <a href="https://informatique.ens-rennes.fr/formation/deuxieme-annee-m1-sif">ENS Rennes</a>.</p>
+      <p>I'm a master's engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>, where I also work as a teaching assistant in Linear algebra. I spent the last year in France as an Erasmus exchange student at the <a href="https://informatique.ens-rennes.fr/formation/deuxieme-annee-m1-sif">ENS Rennes</a>.</p>
 
       <p>Apart from studying, I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">FYKOS Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-person physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani), and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
 
@@ -55,37 +54,7 @@
     </div>
   </div>
 
-<!--   <div class="w3-row dark w3-padding-16">
-    <div class="w3-third w3-container">
-      <h1 class="w3-text-green">Interests and skills</h1>
-    </div>
-    <div class="w3-third w3-container w3-padding-16">
-      <h3>Interests</h3>
-      <ul>
-        <li>Phylogenetic compression</li>
-        <li>Bioinformatics</li>
-        <li>Combinatorics on words</li>
-        <li>String attractors</li>
-        <li>Language learning</li>
-        <li>Piano play</li>
-      </ul>
-    </div>
-    <div class="w3-third w3-container w3-padding-16">
-      <h3>Skills</h3>
-      <ul>
-        <li>Python, C++, PHP, Coq</li>
-        <li>SQL, XML, Nette, dokuwiki</li>
-        <li>Git(Hub), (La)TeX</li>
-<<<<<<< HEAD
-        <li>Czech (native speaker), English (C2), French (B2), Spanish (B1)</li>
-=======
-        <li>Czech (native speaker), English (C2), Spanish (B2), French (B1)</li>
->>>>>>> a8ec999669099826aa87f3b2e88ec22ea8a89088
-      </ul>
-    </div>
-  </div> -->
-
-  <div class="w3-row dark w3-padding-16" id="contact">
+  <div class="w3-row dark w3-padding-16">
     <div class="w3-third w3-container">
       <h1 class="w3-text-green">Research projects</h1>
     </div>
@@ -101,7 +70,7 @@
   </div>
 
 
-  <div class="w3-row light w3-padding-16" id="contact">
+  <div class="w3-row light w3-padding-16">
     <div class="w3-third w3-container">
       <h1 class="w3-text-green">Contact</h1>
     </div>
@@ -119,35 +88,10 @@
     </div>
   </div>
 
-<!--  <div class="w3-row w3-padding-64">
-    <div class="w3-twothird w3-container">
-      <h1 class="w3-text-teal">Heading 3</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum
-        dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="w3-third w3-container">
-      <p class="w3-border w3-padding-large w3-padding-32 w3-center">AD</p>
-      <p class="w3-border w3-padding-large w3-padding-64 w3-center">AD</p>
-    </div>
-  </div>
-
-  <div class="w3-center w3-padding-32">
-    <div class="w3-bar">
-      <a class="w3-button w3-black" href="#">1</a>
-      <a class="w3-button w3-hover-black" href="#">2</a>
-      <a class="w3-button w3-hover-black" href="#">3</a>
-      <a class="w3-button w3-hover-black" href="#">4</a>
-      <a class="w3-button w3-hover-black" href="#">5</a>
-      <a class="w3-button w3-hover-black" href="#">»</a>
-    </div>
-  </div>-->
-
-
-
   <footer id="myFooter">
   <div class="footer-container">
     <div class="w3-container w3-theme-l2 footer-content">
-      <span style="margin-right: auto; text-align: left;"><a href="croco.html"><i class="fa-solid fa-atom-simple"></i>Crocoloop</a></span>
+      <span style="margin-right: auto; text-align: left;"><a href="croco/"><i class="fa-solid fa-atom-simple"></i>Crocoloop</a></span>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </div>
   </div>
@@ -155,31 +99,6 @@
 
 <!-- END MAIN -->
 </div>
-
-<!-- <script>
-// Get the Sidebar
-var mySidebar = document.getElementById("mySidebar");
-
-// Get the DIV with overlay effect
-var overlayBg = document.getElementById("myOverlay");
-
-// Toggle between showing and hiding the sidebar, and add overlay effect
-function w3_open() {
-  if (mySidebar.class === 'w3-bar-item w3-button w3-hide-small w3-hover-white') {
-    mySidebar.class = 'w3-bar-item w3-button w3-hover-white';
-    // overlayBg.style.display = "none";
-  } else {
-    mySidebar.class = 'w3-bar-item w3-button w3-hide-small w3-hover-white';
-    // overlayBg.style.display = "block";
-  }
-}
-
-// Close the sidebar with the close button
-function w3_close() {
-  mySidebar.style.display = "none";
-  overlayBg.style.display = "none";
-}
-</script> -->
 
 </body>
 </html>
