--- a/teaching/index.html
+++ b/teaching/index.html
@@ -37,14 +37,14 @@
       <h2 class="w3-text-green">Informace ke cvičení LAL1</h2>
     </div>
     <div class="w3-twothird w3-container w3-padding-16">
-      <strong>Kdy:</strong> Čtvrtky 14.00-15.40<br/>
+      <strong>Kdy:</strong> Čtvrtky, 14.00-15.40<br/>
       <strong>Kde:</strong> T-209<br/>
       <!-- <strong>Podmínky zápočtu:</strong> <br/> -->
     </div>
   </div>
 </div>
 
-<div class="w3-row dark w3-padding-16" id="contact">
+<!-- <div class="w3-row dark w3-padding-16" id="contact">
   <div class="w3-third w3-container">
     <h2 class="w3-text-green">1. cvičení (26. 9. 2024)</h2>
   </div>
@@ -53,7 +53,7 @@
   </div>
 </div>
 
-<!-- <div class="w3-row light w3-padding-16" id="contact">
+<div class="w3-row light w3-padding-16" id="contact">
   <div class="w3-third w3-container">
     <h2 class="w3-text-green">2. cvičení (3. 10. 2024)</h2>
   </div>
