--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <div class="w3-top">
   <div class="w3-bar w3-theme-d4 w3-collapse w3-top w3-left-align w3-large">
     <a href="" class="w3-bar-item w3-button w3-theme-d1 w3-hover-white">Veronika Hendrychová</a>
-    <a href="teaching/" class="w3-bar-item w3-button w3-theme-d2 w3-hover-white">Teaching</a>
+    <!-- <a href="teaching/" class="w3-bar-item w3-button w3-theme-d2 w3-hover-white">Teaching</a> -->
   </div>
 </div>
 
@@ -45,11 +45,11 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I'm a master's engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>, where I also work as a teaching assistant in Linear algebra. I spent the last year in France as an Erasmus exchange student at the <a href="https://informatique.ens-rennes.fr/formation/deuxieme-annee-m1-sif">ENS Rennes</a>.</p>
+      <p>I'm a master's engineering student at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>, where I also work as a teaching assistant in Linear algebra. My field is Mathematical Computer Science, and in my work I focus on bioinformatics with a little overlap with combinatorics on words. I spent the last year in France as an Erasmus exchange student at the <a href="https://informatique.ens-rennes.fr/formation/deuxieme-annee-m1-sif">ENS Rennes</a>.</p>
 
-      <p>Apart from studying, I'm an active member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">FYKOS Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-person physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani), and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
+      <p>Apart from studying, I am a member of the <a href="https://fykos.org">FYKOS</a> student group. I'm engaged primarily in event management and IT. We organize several physics competitions for high-school students each year, including the <a href="https://fykos.org">FYKOS Competition</a>, <a href="https://fyziklani.org">Fyziklani</a> (in-person physics competition in Prague), <a href="https://physicsbrawl.org">Physics Brawl Online</a> (online version of Fyziklani), and <a href="https://dsef.cz">Day with Experimental Physics</a>.</p>
 
-      <p>I also enjoy contributing to other educational events for students and children, such as <a href="https://pair.camp/">the PAIR Camp</a>, or Science summer camps organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>. I find joy in learning foreign languages, playing Go, and practicing piano play.</p>
+      <p>I also enjoy contributing to other educational events for students and children, such as <a href="https://pair.camp/">the PAIR Camp</a>, or Science summer camps organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>. I find joy in learning foreign languages, playing Go, attempting calisthenics, and practicing piano play.</p>
 
     </div>
   </div>
@@ -62,7 +62,7 @@
       <ul>
         <li><strong>Mathematical model of phylogenetic compression</strong> - current project under <a href="https://brinda.eu/" target="_blank">Karel Břinda</a>
           <ul><li>genomics, phylogenetic trees, mathematical modeling, complexity theory</li></ul>
-        <li><strong>String attractors of Rote sequences</strong> - <a href="bachelor-thesis.pdf" target="_blank">Bachelor thesis</a> and a subsequent <a href="https://arxiv.org/abs/2308.00850" target="_blank">paper</a> with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
+        <li><strong>String attractors of Rote sequences</strong> - <a href="bachelor-thesis.pdf" target="_blank">Bachelor thesis</a> and a subsequent <a href="https://dmtcs.episciences.org/paper/view/id/14268" target="_blank">paper in DMTCS</a> with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
           <ul><li>string attractors, combinatorics on words, Sturmian, pseudostandard, and Rote infinite words</li></ul>
         <li>Other projects published at <a href="https://github.com/vercah/" target="_blank">GitHub</a></li>
       </ul>
@@ -78,7 +78,7 @@
       <ul class="fa-ul">
         <li class="fa-li">
           <i class="fa-solid fa-envelope big-icon" aria-hidden="true"></i>
-          <span>hendrver[cat]fjfi[dog]cvut[dog]cz</span><br>
+          <span>hendrver[cat]cvut[dog]cz</span><br>
         </li>
         <li class="fa-li">
           <i class="fa-solid fa-location-dot big-icon" aria-hidden="true"></i>
