--- a/teaching/index.html
+++ b/teaching/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
 <title>Teaching</title>
@@ -21,16 +21,16 @@
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- Navbar 
 <div class="w3-top">
   <div class="w3-bar w3-theme-d4 w3-collapse w3-top w3-left-align w3-large">
     <a href="../" class="w3-bar-item w3-button w3-theme-d1 w3-hover-white">Veronika Hendrychová</a>
     <a href="" class="w3-bar-item w3-button w3-theme-d2 w3-hover-white">Teaching</a>
   </div>
-</div>
+</div>-->
 
 
-<!-- Main content: shift it to the right by 250 pixels when the sidebar is visible -->
+<!-- Main content: shift it to the right by 250 pixels when the sidebar is visible 
 <div class="w3-main">
   <div class="w3-row w3-padding-64 light" id="about">
     <div class="w3-third w3-container">
@@ -38,11 +38,11 @@
     </div>
     <div class="w3-twothird w3-container w3-padding-16">
       <strong>Kdy:</strong> Čtvrtky, 14.00-15.40<br/>
-      <strong>Kde:</strong> T-209<br/>
-      <!-- <strong>Podmínky zápočtu:</strong> <br/> -->
+      <strong>Kde:</strong> T-209<br/>-->
+      <!-- <strong>Podmínky zápočtu:</strong> <br/> 
     </div>
   </div>
-</div>
+</div>-->
 
 <!-- <div class="w3-row dark w3-padding-16" id="contact">
   <div class="w3-third w3-container">
@@ -78,7 +78,7 @@
   <div class="w3-twothird w3-container w3-padding-16">
          
   </div>
-</div> -->
+</div> 
 
 <footer id="myFooter">
 <div class="footer-container">
@@ -87,10 +87,11 @@
     <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </div>
 </div>
-</footer>
+</footer>-->
 
-<!-- END MAIN -->
+<!-- END MAIN 
 </div>
 
 </body>
 </html>
+ -->
