--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
         <li><strong>String attractors of Rote sequences</strong> - <a href="bachelor-thesis.pdf" target="_blank">Bachelor thesis</a> and a subsequent <a href="https://dmtcs.episciences.org/paper/view/id/14268" target="_blank">paper in DMTCS</a> with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
           <ul><li>string attractors, combinatorics on words, Sturmian, pseudostandard, and Rote infinite words</li></ul>
         <li>Other projects published at <a href="https://github.com/vercah/" target="_blank">GitHub</a></li>
+       <li><a href="https://docs.google.com/presentation/d/1XV37oqmxfe44eOPwmW4ku-zmz2i-z9ZK9xgcmj45ooE/edit?usp=sharing">Presentation</a></li>
       </ul>
     </div>
   </div>
