--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="w3-twothird w3-container">
       <h1 class="w3-text-green">About me</h1>
-      <p>I study Mathematical Computer Science master's program at the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. I also work there as a teaching assistant in Linear Algebra. Currently, I am exploring PhD positions in bioinformatics, particularly with some overlap with mathematics or modeling.</p>
+      <p>I hold an engineering degree in Mathematical Computer Science from the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. I am interested in opportunities at the intersection of mathematics, computer science, operations, and life sciences — whether in research, industry, or beyond.</p>
 
       <p>Apart from studying, sometimes I take part organizing both nation-wide and international competitions and events as a member of the <a href="https://fykos.org">FYKOS</a> student group, now mainly as senior consultant. I also enjoy contributing to other educational events for students and children, such as <a href="https://pair.camp/">the PAIR Camp</a>, or Science summer camps organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>. I find joy in learning foreign languages, playing Go, attempting calisthenics, and practicing piano play.</p>
 
@@ -63,7 +63,6 @@
         <li><strong>String attractors of Rote sequences</strong> - <a href="bachelor-thesis.pdf" target="_blank">Bachelor thesis</a> and a subsequent <a href="https://dmtcs.episciences.org/paper/view/id/14268" target="_blank">paper in DMTCS</a> with <a href="https://kmlinux.fjfi.cvut.cz/~balkolub/" target="_blank">Ľubomíra Dvořáková</a></li>
           <ul><li>string attractors, combinatorics on words, Sturmian, pseudostandard, and Rote infinite words</li></ul>
         <li>Other projects published at <a href="https://github.com/vercah/" target="_blank">GitHub</a></li>
-       <li><a href="https://docs.google.com/presentation/d/1XV37oqmxfe44eOPwmW4ku-zmz2i-z9ZK9xgcmj45ooE/edit?usp=sharing">Presentation</a></li>
       </ul>
     </div>
   </div>
