--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h1 class="w3-text-green">About me</h1>
       <p>I hold an engineering degree in Mathematical Computer Science from the Czech Technical University in Prague, <a href="https://www.fjfi.cvut.cz/en/education/master-s-study/fields-of-master-continuation-programme-new/mathematical-informatics">Faculty of Nuclear Sciences and Physical Engineering</a>. I am interested in opportunities at the intersection of mathematics, computer science, operations, and life sciences — whether in research, industry, or beyond.</p>
 
-      <p>Apart from studying, sometimes I take part organizing both nation-wide and international competitions and events as a member of the <a href="https://fykos.org">FYKOS</a> student group, now mainly as senior consultant. I also enjoy contributing to other educational events for students and children, such as <a href="https://pair.camp/">the PAIR Camp</a>, or Science summer camps organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>. I find joy in learning foreign languages, playing Go, attempting calisthenics, and practicing piano play.</p>
+      <p>Sometimes I take part organizing both nation-wide and international competitions and events as a member of the <a href="https://fykos.org">FYKOS</a> student group, now mainly as senior consultant. I also enjoy contributing to other educational events for students and children, such as <a href="https://pair.camp/">the PAIR Camp</a>, or Science summer camps organized by the <a href="https://www.natur.cuni.cz/eng">Faculty of Science, Charles University</a>. I find joy in learning foreign languages, playing Go, attempting calisthenics, and practicing piano play.</p>
 
     </div>
   </div>
